--- a/event-system-app/.env
+++ b/event-system-app/.env
@@ -1,1 +1,5 @@
-REACT_APP_API_BASE_URL=http://localhost
+REACT_APP_EVENT_API=https://event-service-api-axel-abegdkdse2cjgyh5.northeurope-01.azurewebsites.net/
+REACT_APP_USER_API=https://user-service-api-axel-aqgthhgparb4fqh0.northeurope-01.azurewebsites.net/
+REACT_APP_TICKET_API=https://ticket-service-api-axel-amejdmfvexh7c2hs.northeurope-01.azurewebsites.net/
+CI=false
+GENERATE_SOURCEMAP=false
